[package]
name = "learn_graphics"
version = "0.1.0"
authors = ["Kocho <chankocyo@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"
winit = "0.26"
wgpu = "0.12"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
# NEW!
bytemuck = { version = "1.4", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = {version = "0.2", features = ["color"]}
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "learn_graphics"
path = "src/main.rs"


